# death

./: LICENSE  Procfile  README.md  download_data.sh  pyproject.toml  requirements.txt
death/: __init__.py  __main__.py  app.py  download.py  prel.py  scb.py  update.py
scb_queries/: BefUtvKon1749.json  ManadBefStatRegion.json
