[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "death"
authors = [{name = "Per Rosengren", email = "per.rosengren@gmail.com"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "dash ~= 1.21",
    "pandas ~= 1.3",
    "openpyxl ~= 3.0",
    "pyjstat ~= 2.2"
]

[project.optional-dependencies]
format = ["black"]
